unpackaged/main/default/objects/QuoteLineItem/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>This is for the flow to create assets and reference the correct product name.</description>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductName</label>
    <type>Text</type>
</CustomField>