unpackaged/main/default/objects/QuoteLineItem/fields/VAT_Amount_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_Placeholder__c</fullName>
    <description>This field will be populated by a workflow rule in order to be rolled up to the quote level and be referenced in an invoice.</description>
    <label>VAT Amount (Placeholder)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>