unpackaged/main/default/objects/QuoteLineItem/fields/VAT_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate_Formula__c</fullName>
    <formula>Quote.Opportunity.Account.VAT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>